bug squashing

--- a/src/app/beast-view/beast-view-gm/beast-view-gm.component.css
+++ b/src/app/beast-view/beast-view-gm/beast-view-gm.component.css
@@ -74,3 +74,7 @@
     text-align: center;
     font-size: 12px;
 }
+
+.black {
+    color: black
+}
